--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: '>=2.19.5 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -54,6 +54,9 @@ dependencies:
   shared_preferences: ^2.1.0
   flappy_search_bar_ns: ^2.0.2
   image_picker: ^0.8.7+3
+  sensors: ^2.0.3
+  flutter_native_splash: ^2.2.19
+  alan_voice: 3.0.0
 
 dev_dependencies:
   flutter_test:
