--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   sensors: ^2.0.3
   flutter_native_splash: ^2.2.19
   alan_voice: 3.0.0
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
