--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   image_picker: ^0.8.7+3
   sensors: ^2.0.3
   flutter_native_splash: ^2.2.19
-  alan_voice: 3.0.0
+  alan_voice: ^3.12.0
   url_launcher: ^6.1.10
 
 dev_dependencies:
